--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Manju's Portfolio</title>
+    <meta name="description" content="Welcome to Manju's Portfolio Website" />
+    <meta name="author" content="Manju" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Manju's Portfolio" />
+    <meta property="og:description" content="Check out my portfolio projects and works." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://manjusportfolio.netlify.app/" />
+    <meta property="og:image" content="https://ibb.co/ZptcV2ML" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Manju's Portfolio" />
+    <meta name="twitter:description" content="Check out my portfolio projects and works." />
+    <meta name="twitter:image" content="https://ibb.co/ZptcV2ML" />
   </head>
 
   <body>
