--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <meta name="description" content="Welcome to Manju's Portfolio Website" />
     <meta name="author" content="Manju" />
 
-    <!-- Open Graph -->
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
     <meta property="og:title" content="Manju's Portfolio" />
     <meta property="og:description" content="Check out my portfolio projects and works." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://manjusportfolio.netlify.app/" />
-    <meta property="og:image" content="https://ibb.co/ZptcV2ML" />
+    <meta property="og:image" content="https://i.ibb.co/HpTKKvrN/image.png" />
 
-    <!-- Twitter -->
+    <!-- Twitter Preview -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Manju's Portfolio" />
     <meta name="twitter:description" content="Check out my portfolio projects and works." />
-    <meta name="twitter:image" content="https://ibb.co/ZptcV2ML" />
+    <meta name="twitter:image" content="https://i.ibb.co/HpTKKvrN/image.png" />
   </head>
 
   <body>
