--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UrbanDos</title>
-    <link rel="icon" href="/logo.svg" type="image/svg+xml" />
-    <meta name="description" content="Discover UrbanDos premium streetwear collection. Minimal design, maximum impact. Shop oversized t-shirts, hoodies, and sweatshirts in black, white, and silver." />
-    <meta name="keywords" content="streetwear, urban clothing, premium t-shirts, hoodies, minimal fashion, black white silver" />
-    <meta name="author" content="UrbanDos" />
 
-    <meta property="og:title" content="UrbanDos - Premium Streetwear Collection" />
-    <meta property="og:description" content="Premium & Customized streetwear" />
+    <title>Manju's Portfolio</title>
+    <meta name="description" content="Welcome to Manju's Portfolio Website" />
+    <meta name="author" content="Manju" />
+
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <meta property="og:title" content="Manju's Portfolio" />
+    <meta property="og:description" content="Check out my portfolio projects and works." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/src/assets/hero-image.jpg" />
+    <meta property="og:url" content="https://manjusportfolio.netlify.app/" />
+    <meta property="og:image" content="https://i.ibb.co/HpTKKvrN/image.png" />
 
+    <!-- Twitter Preview -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Manju's Portfolio" />
+    <meta name="twitter:description" content="Check out my portfolio projects and works." />
+    <meta name="twitter:image" content="https://i.ibb.co/HpTKKvrN/image.png" />
   </head>
 
   <body>
