Remove title icon/favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Manju's Portfolio</title>
     <meta name="description" content="Welcome to Manju's Portfolio Website" />
     <meta name="author" content="Manju" />
+    
+    <!-- Remove favicon -->
+    <link rel="icon" href="data:image/x-icon;base64," />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Manju's Portfolio" />
@@ -28,5 +31,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-  
+
 </html>
