feat: updated authentication logic

--- a/index.html
+++ b/index.html
@@ -4,32 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Manju's Portfolio</title>
-    <meta name="description" content="Welcome to Manju's Portfolio Website" />
+    <title>Manju's Portfolio | Frontend Developer & Data Analyst</title>
+    <meta
+      name="description"
+      content="Explore the professional portfolio of Manju, a Frontend Developer and Data Analyst dedicated to building minimal and impactful digital experiences."
+    />
     <meta name="author" content="Manju" />
-    
-    <!-- Remove favicon -->
-    <link rel="icon" href="data:image/x-icon;base64," />
+
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Manju's Portfolio" />
-    <meta property="og:description" content="Check out my portfolio projects and works." />
+    <meta
+      property="og:description"
+      content="Explore my projects in web development and data analysis."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://manjusportfolio.netlify.app/" />
-    <meta property="og:image" content="https://manjusportfolio.netlify.app/prot-pro.png" />
+    <meta property="og:image" content="/og-image.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Manju's Portfolio" />
-    <meta name="twitter:description" content="Check out my portfolio projects and works." />
-    <meta name="twitter:image" content="https://manjusportfolio.netlify.app/prot-pro.png" />
+    <meta
+      name="twitter:description"
+      content="Explore my projects in web development and data analysis."
+    />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-
 </html>
